Fixed Dark Mode colors for listbox in Clippings Manager export dialog

--- a/src/pages/clippingsMgr.css
+++ b/src/pages/clippingsMgr.css
@@ -199,6 +199,8 @@ input[type="search"] {
 }
 
 select {
+    background-color: var(--color-listbox-bkgd);
+    color: var(--color-default-text);
     font: caption;
 }
 
